[profiler] Add missing VMStates to EntryForVMState

Bug: chromium:770530
Change-Id: I48f4c6968a34e0dce99f72e56302de81bf0f1991
Reviewed-on: https://chromium-review.googlesource.com/709597
Commit-Queue: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Peter Marshall <petermarshall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#48446}